# UdemyCmake

2_CMake/01_HelloWorld/: CMakeLists.txt
2_CMake/02_BasicProject/: CMakeLists.txt  Makefile
2_CMake/02_BasicProject/app/: CMakeLists.txt  main.cc
2_CMake/02_BasicProject/build-wsl/: CMakeCache.txt  Makefile  cmake_install.cmake
2_CMake/02_BasicProject/build-wsl/app/: Executable  Makefile  cmake_install.cmake
2_CMake/02_BasicProject/build-wsl/configured/: Makefile  cmake_install.cmake
2_CMake/02_BasicProject/build-wsl/configured_files/include/: config.hpp
2_CMake/02_BasicProject/build-wsl/src/: Makefile  cmake_install.cmake
2_CMake/02_BasicProject/build-wsl/src/my_lib/: Makefile  cmake_install.cmake
2_CMake/02_BasicProject/cmake/: AddGitSubmodule.cmake  Docs.cmake
2_CMake/02_BasicProject/configured/: CMakeLists.txt  config.hpp.in
2_CMake/02_BasicProject/docs/: Doxyfile
2_CMake/02_BasicProject/src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h
